<resources>
    <string name="app_name">Gestión Audios</string>
    <string name="label1">PlayList Online</string>
    <string name="label2">Añadir Audio Online</string>
    <string name="text1">Título</string>
    <string name="caja1">Introduce el título del audio</string>
    <string name="text2">URL</string>
    <string name="caja2">Introduce la URL del video</string>
    <string name="boton1">GUARDAR AUDIO</string>
    <string name="label3">Reporductor Audio</string>
    <string name="boton2">VOLVER</string>

    <string name="Toast1">Todos los campos son obligatorios</string>
    <string name="Toast2">Audio guardado correctamente</string>
    <string name="Toast3">Título: </string>
    <string name="Toast4">No ha sido posible reproducir el audio</string>
</resources>